scss/partials/_notifications.scss
div.notifications {
  position: fixed;
  left: 16px;
  bottom: 16px;
  z-index: 10000;

  @include mobile() {
    width: 100%;
    left: 0px;
    bottom: 0px;
  }

  div.notification {
    width: 320px;
    background-color: $light_navy;
    border-radius: 6px;
    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.16);
    margin-top: 8px;
    transition: opacity 180ms ease-in;
    // z-index: 10000;
    padding: 11px 16px;
    position: relative;

    @include mobile() {
      width: 100%;
      border-radius: 0px;
    }

    &.server-error {
      background-color: $carrot_orange;

      div.notification-title {
        color: white;
      }

      div.notification-description {
        color: white;
      }

      button.notification-dismiss-bt {
        color: white;
      }
    }

    @include big_web() {
      &:not(.server-error).light-theme {
        background-color: white;

        span.slack-icon {
          background-image: cdnUrl("/img/ML/slack_normal.svg");
        }

        div.notification-title {
          color: $light_navy;
        }

        div.notification-description {
          color: $light_navy;

          &.oc-mentions span.oc-mention[data-found="true"] {
            color: $light_navy;
          }
        }

        button.notification-button {
          &.solid-green {
            color: $carrot_green;
            background-color: $feint_emerald;
          }

          &.default-link {
            color: $light_navy;
          }
        }
      }
    }

    &.slack-bot {
      div.notification-title {
        font-size: 16px;
        line-height: 18px;
      }
      div.notification-description {
        opacity: 0.6;
      }
    }

    &.opac {
      div.notification-title, div.notification-description, button.notification-dismiss-bt {
        opacity: 0.5;
      }
    }

    &.dismiss-button {
      div.notification-title {
        width: calc(100% - 26px);
        float: left;
      }
    }

    &.mention-notification {

      div.notification-title {
        font-size: 12px;
      }

      div.notification-description {
        font-size: 14px;

        p {
          margin: 0;
          padding: 0;
        }
      }
    }

    &.inline-bt {
      div.notification-title {
        max-width: 80%;
        float: left;
      }
    }

    div.mention-author {
      @include user-profile(24);

      div.user-avatar-img-container {
        float: left;
      }
    }

    span.slack-icon {
      width: 16px;
      height: 16px;
      background-size: 16px;
      background-position: 0px 0px;
      background-image: cdnUrl("/img/ML/slack_white_icon.svg");
      float: left;
      margin-right: 8px;
    }

    div.notification-title {
      @include OC_Body_Bold();
      font-size: 14px;
      color: white;

      &.no-description {
        @include OC_Body_Book();
        line-height: 22px;
      }

      @include mobile() {
        margin-top: 2px;
      }
    }

    button.notification-dismiss-bt {
      position: absolute;
      right: 16px;
      top: 9px;
      width: 24px;
      height: 24px;
      padding: 0;
      margin: 0;
      color: $carrot_green;
    }

    div.notification-description {
      @include OC_Body_Book();
      font-size: 14px;
      color: white;
      margin-top: 4px;
      overflow-wrap: break-word;

      &.oc-mentions span.oc-mention[data-found="true"] {
        background-color: transparent !important;
        color: white !important;
        @include OC_Body_Book();
      }

      a {
        color: $carrot_green;
      }
    }

    button.notification-button {
      color: $carrot_green;
      background-color: transparent;
      float: right;
      text-align: right;
      padding: 0px;
      margin: 0px;
      @include OC_Body_Bold();
      font-size: 12px;
      line-height: 24px;

      &.solid-green {
        float: unset;
        width: 100%;
        height: 32px;
        margin-top: 16px;
        color: white;
        background-color: $carrot_green;
        padding: 7px 0px;
        text-align: center;
        @include OC_Body_Bold();
        font-size: 16px;
        letter-spacing: 0.22px;
        border-radius: 4px;
        display: flex;
        justify-content: center;
        align-items: center;

        @include mobile() {
          padding: 9px 24px;
        }

        span.slack-icon {
          top: 3px;
          position: relative;
        }
      }

      &.default-link {
        float: unset;
        margin-top: 8px;
        height: 16px;
        @include OC_Body_Bold();
        font-size: 14px;
        line-height: 16px;
        color: white;
        background-color: transparent;
        opacity: 0.6;
      }
    }
  }
}

